--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Cape Town Loadshedding Map</title>
-    <link rel='stylesheet' href='css/fullcalendar.css' />
+    <link rel='stylesheet' href='css/ol.css' type="text/css" />
+    <link rel='stylesheet' href='css/fullcalendar.css' type="text/css" />
+    <link rel='stylesheet' href='css/bootstrap.css' type="text/css" />
     <script src='js/jquery-1.11.1.js'></script>
-    <script src='js/moment.js'></script>
-    <script src='js/fullcalendar.js'></script>
+    <script src='js/moment.js' type="text/javascript"></script>
+    <script src='js/ol.js' type="text/javascript"></script>
+    <script src='js/fullcalendar.js' type="text/javascript"></script>
   </head>
   <body>
-   <div>Title, controls, etc</div>
-   <div id="content">
-     <div id="map"></div>
-     <div id="calendar"></div> 
-   </div>
-    <script src='js/script.js'></script>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-3"><h1>Title</h1></div>
+        <div class="col-md-9"><h2>controls, etc</h1></div>
+      </div>
+      
+      <div id="content" class="row">
+        <div id="map" class="col-md-5">MAP</div>
+        <div id="calendar" class="col-md-7"></div> 
+      </div>
+    </div>
+  <script src='js/script.js' type="text/javascript"></script>
   </body>
 </html>
