--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-3"><h1>Title</h1></div>
-        <div class="col-md-9"><h2>controls, etc</h1></div>
+      <div class="row" style="height: 100%">
+        <div class="col-md-5"><h1>Capetown Loadshedding Map</h1></div>
+        <div class="col-md-7"><p>Click your location on the map, find loadshedding times in the table. Use the map zoom controls to zoom in. In the table, whatever stage it says means if loadshedding is at that stage or higher then there will be loadshedding at that time.</p></div>
       </div>
       
       <div id="content" class="row">
-        <div id="map" class="col-md-5">MAP</div>
+        <div id="map" class="col-md-5"></div>
         <div id="calendar" class="col-md-7"></div> 
       </div>
     </div>
